2002-11-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GCObject.m: Attempt to make garbage collecting
	thread-safe.
	* Source/Additions/GCArray.m: Fix count initialising mutable array.
	* Source/Additions/GSMime.m: Provide a method to generate and return
	a string suitable for use as a boundary.  Make tolerant of multipart
	messages with 'application' as the message type.

2002-11-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Treat '-' on its own as an argument
	rather than the start of a flag name.
	* Source/Additions/GSMime.m: Place angle brackets around generated
	content ID. Add method to generate message ID.  Tidy comments a
	little.

2002-11-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/libgnustep-base.def: Add garbage collecting classes.

2002-11-20  Adam Fedor  <fedor@gnu.org>

	* Source/NSBundle.m (+preferredLocalizationsFromArray:forPreferences:): 
	Check for array with no objects.
	([NSBundle -localizedInfoDictionary]): Idem.

2002-11-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/Unicode.m: Work around bug in the redhat 8 iconv
	library ... was sucessfully opening the encoding "" when it shouldn't.

2002-11-19  Adam Fedor  <fedor@gnu.org>

	* Version: 1.5.1
	* Documentation/news.texi: Updated.

2002-11-19  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/NSBundle.h: More documentation. Add missing
	MacOSX methods.
	* Source/NSBundle.m (-executablePath): New
	(-load): Use it.
	(+pathsForResourcesOfType:inDirectory:): New stub.
	(-pathsForResourcesOfType:inDirectory:forLocalization:): Idem.
	(-pathForResource:ofType:inDirectory:forLocalization:): Idem.
	(+preferredLocalizationsFromArray:): New method.
	(+preferredLocalizationsFromArray:forPreferences:): Idem.
	(-localizedInfoDictionary): Idem.
	(-localizations): Idem.
	(-preferredLocalizations): Idem.

	* Source/cifframe.m (cifframe_from_info): Fix so that stucture
	returns get space allocated.
